<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Health</string>
    <string name="app_name_long">Privacy Friendly Pedometer</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="action_help">Information</string>
    <string name="action_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="action_main">Pedometer</string>
    <string name="action_training">Training</string>
    <string name="version_number">Version</string>
    <string name="about_author">Author: </string>
    <string name="about_author_names" translatable="false">Tobias Neidig </string>
    <string name="about_author_contributors"> and contributors.</string>
    <string name="about_affiliation">In affiliation with</string>
    <string name="more_info">More information can be found on:</string>
    <string name="about_third_party_libs">The app uses <a href="https://github.com/PhilJay/MPAndroidChart">MPAndroidChart from Philipp Jahoda</a> (Apache 2 License).</string>
    <string name="privacy_friendly">This application belongs to the Privacy Friendly Apps group developed by Technische Universität Darmstadt. Sourcecode licensed under GPLv3. Images copyright TU Darmstadt and Google Inc.</string>
    <string name="github" translatable="false"><a href="https://github.com/SecUSo/privacy-friendly-activity-tracker">Github-Repo</a></string>
    <string name="url"><a href="https://www.secuso.org/pfa">SECUSO-Website</a></string>
    <string name="month">Month</string>
    <string name="week">Week</string>
    <string name="day">Day</string>
    <string name="steps">Steps</string>
    <string name="calories">calories</string>
    <string name="activity_summary_subtitle">Summary of activities</string>
    <string name="activity_chart_summary_subtitle">Detailed summary of your activities</string>
    <string name="summary_card_kilocalories">kcal</string>
    <string name="summary_card_calories">cal</string>
    <string name="correct_steps">Correct steps</string>
    <string name="correct_steps_dialog_title">Correct steps</string>
    <string name="correct_steps_dialog_message">Please provide a new number of steps you walked.</string>
    <string name="hint_steps">Number of steps</string>
    <string name="pause_step_detection">Pause step detection</string>
    <string name="continue_step_detection">Continue step detection</string>
    <string name="help_overview_heading">Overview</string>
    <string name="help_intro">This app can count your steps in background, provides you an overview about your walked steps and allows you to define custom walking modes and notifications if the achievement of your daily step goal is in danger.</string>
    <string name="help_functionality_step_counter_summary">The step counter counts your daily steps in background and can be disabled in the settings.</string>
    <string name="help_functionality_notification_heading">Permanent Notification</string>
    <string name="help_functionality_notification">Notification</string>
    <string name="help_functionality_notification_summary">The permanent notification is necessary to keep the step counter alive in background. The content of the notification can be chosen in the settings.</string>
    <string name="help_functionality_notification_delete">You can disable all notifications in system preferences.</string>
    <string name="help_functionality_motivation_alert">Motivation alert</string>
    <string name="help_functionality_motivation_alert_summary">The app can show you motivation alerts if the achievement of your daily step goal is in danger. You can define the criterion, the time of day and the notification texts.</string>
    <string name="help_privacy_heading">Privacy Info</string>
    <string name="help_permission_boot_heading">Permission: Receive Boot Completed</string>
    <string name="help_permission_boot_description">is used to start the step counter and set the notifications at boot time. If the permission is not granted you have to start the app manually once after boot to activate the app.</string>
    <string name="help_permissions_selection">The permissions used by Privacy Friendly Pedometer can not be managed by the user in any Android version.</string>
    <string name="help_permission_wake_heading">Permission: Wake Lock</string>
    <string name="help_permission_wake_description">is used to keep the CPU awake to count the steps in background.</string>
    <string name="help_permission_gps_heading">Permission: Precise location</string>
    <string name="help_permission_gps_description">is used to show your current walking speed on home screen. If the permission is not granted the walking speed will not be showed - there are no other implications.</string>
    <string name="pref_header_general">General</string>
    <string name="pref_group_title_personal_settings">Personalization</string>
    <string name="underweight">Underweight</string>
    <string name="overweight">Overweight</string>
    <string name="obese">Obese</string>
    <string name="about_bmi">About BMI</string>
    <string name="bmi_desc">Body mass index (BMI) is your weight in kilograms divided by the square of your height in meters. For example, an adult who\'s 1.75 meters tall and weights 70 kilograms
    will have a BMI of 22.9. The healthy range for you will depend on your age, gender, and muscle mass.</string>
    <string name="bmi_formula">Calculating BMI: 65.0 kg/1.70 ㎡ = 22.5</string>
    <string name="about_body_fat_percentage">About body fat percentage</string>
    <string name="body_fat_percentage_desc">The body fat percentage is the amount of body fat as a proportion of body weight. This can tell you more about your body\'s fat and lean body mass.
    The body fat percentage can be determined by a number of methods. The percentage of body fat in an individual varies depending on sex, age, height and weight.</string>
    <string name="body_fat_percentage_range_mean">Mean range of body fat percentage</string>
    <string name="classification">Classification</string>
    <string name="women_fat_percent">Women (% fat)</string>
    <string name="men_fat_percent">Men (% fat)</string>
    <string name="essential_fat">Essential fat</string>
    <string name="essential_women_percent">10.0-13.9%</string>
    <string name="essential_men_percent">2.0-5.9%</string>
    <string name="athletes">Athletes</string>
    <string name="athletes_women_percent">14.0-20.9%</string>
    <string name="athletes_men_percent">6.0-13.9%</string>
    <string name="fitness">Fitness</string>
    <string name="fitness_women_percent">21.0-24.9%</string>
    <string name="fitness_men_percent">14.0-17.9%</string>
    <string name="fat_average">Average</string>
    <string name="average_women_percent">25.0-31.9%</string>
    <string name="average_men_percent">18.0-24.9%</string>
    <string name="obese_women_percent">32% and higher</string>
    <string name="obese_men_percent">25% and higher</string>
    <string name="fat_diff_desc">The body fat requirements for men and women are different.\n\n
    A healthcare professional should always be consulted to measure your body fat percentage and to suggest methods to help you keep your body fat under control.</string>
    <string name="normal">Normal</string>
    <string name="flow">Flow</string>
    <string name="pain">Pain</string>
    <string name="physical_conditions">Physical Conditions</string>
    <string name="flow_intensity_light">Light</string>
    <string name="flow_intensity_average">Average</string>
    <string name="flow_intensity_heavy">Heavy</string>
    <string name="pain_intensity_light">Light</string>
    <string name="pain_intensity_average">Average</string>
    <string name="pain_intensity_severe">Severe</string>
    <string name="cramps">Cramps</string>
    <string name="breast_pain">Breast pain</string>
    <string name="headache">Headache</string>
    <string name="dizziness">Dizziness</string>
    <string name="acne">Acne</string>
    <string name="back_pain">Back pain</string>
    <string name="nausea">Nausea</string>
    <string name="tiredness">Tiredness</string>
    <string name="bloating">Bloating</string>
    <string name="period">Period</string>
    <string name="fertile_window">Fertile window</string>
    <string name="cycle_terminology">1. Terminology</string>
    <string name="menstruation">Menstruation</string>
    <string name="menstruation_content">Menstruation is also known as periods, are the regular discharge of blood and tissue from the inner lining of the uterus</string>
    <string name="period_content">Periods usually happen every month and can last for 2 to 7 days. The average period is between 3 and 5 days long.</string>
    <string name="fertile_window_content">The fertile window spans from 5 days before ovulation to 4 days after ovulation, for about 10 days total.
    During this window there is a higher probability of pregnancy.</string>
    <string name="cycle_important_information">2. Important information</string>
    <string name="cycle_meaning">What is a menstrual cycle?</string>
    <string name="cycle_content">Periods (menstruation) are part of the menstrual cycle. The period refers to the part of the cycle when the body discharges blood and tissue from the inner lining of the uterus.
    A cycle is from the first day of the period to the first day of the next period. Cycles become more regular after the first 5 to 7 years.</string>
    <string name="cycle_length_meaning">How long is the average cycle?</string>
    <string name="cycle_length_content">The length varies by person. The average length is 28 days. Periods usually don\'t come exactly on time and it is normal for them to start 7 days early or late.
    Periods can last for 2 to 7 days and the average period is 3 to 5 days long.</string>
    <string name="cycle_phases">Phases</string>
    <string name="cycle_phases_content">The menstrual cycle is made up of phases. The phases are divided by two events, the ovarian cycle and the uterine cycle. The ovarian cycle is the follicular phase,
    ovulation, and the luteal phase. The uterine cycle is menstruation, the proliferative phase, and the secretory phase.\nNote: Ovulation is not considered a stage, but the event that divides the phases.\n\n
    In a general sense, the follicular phase starts the first day of the period and ends the day of ovulation. The period is the early part of the follicular phase. Follicles start maturing during the period.
    The main event of the follicular phase happens after the bleeding ends. During this time more estrogen is produced and the uterus is prepared for possible fertilization. There is no secretion during this time.
    Ovulation marks the end of this phase, and the beginning of the next.\n\n
    The day of ovulation, the egg is released. Under standard circumstances, the next ovulation will take place about 14 to 16 days after the next period starts. The chances of pregnancy are highest 5 days
    before ovulation, this period is called the fertile window.\n\n
    The stage after ovulation is called the luteal phase. The ovaries are stimulated by hormones, luteinizing hormones are secreted. If fertilization didn\'t occur the thickened uterus walls will collapse,
    starting the period. This indicates the end of the current cycle and the start of the next cycle.</string>
    <string name="cycle_predictions">3. Predictions</string>
    <string name="period_predictions">Period predictions</string>
    <string name="period_predictions_content">Predictions are based on the individual\'s data(including the average length of their period and cycle). Reminders are sent based on this data to help keep
    track of the menstrual cycle.</string>
</resources>